# mail_sendler

./: .env.sample  README.md  blog.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_options.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  toggle.html
config/: settings.py  urls.py
sendler/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
sendler/management/commands/: runapscheduler.py
sendler/migrations/: 0001_initial.py  0002_initial.py  0002_rename_client_mailsettings_clients_and_more.py  0003_alter_mailsettings_options.py  0004_alter_mailsettings_options.py  0005_alter_mailsettings_options.py
sendler/templates/includes/: inc_menu.html
sendler/templates/sendler/: base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  contacts.html  index.html  log_list.html  mailsettings_confirm_delete.html  mailsettings_detail.html  mailsettings_form.html  mailsettings_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  messge_detail.html
sendler/templates/sendler/includes/: inc_menu.html
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_is_active.py
users/templates/users/: login.html  password_reset.html  register.html  user_form.html  user_list.html
